[package]

name = "earley"
version = "0.0.0"
authors = [
  "Zeke Foppa <benjamin.foppa@gmail.com>",
]

[profile.dev]
opt-level = 1           # Controls the --opt-level the compiler builds with
debug = true            # Controls whether the compiler passes -g or `--cfg ndebug`
rpath = false           # Controls whether the compiler passes `-C rpath`
lto = false             # Controls `-C lto` for binaries and staticlibs
debug-assertions = true # Controls whether debug assertions are enabled

[lib]
name = "earley"
path = "src/mod.rs"

[dependencies]
clippy = "*"
